# git-ignore-doctor

./: CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: tests.yml
docs/: project-copy.md  release-v0.1.0.md  release-v0.1.1.md  research.md
src/git_ignore_doctor/: __init__.py  cli.py  git.py  models.py  render.py  rules.py  scanner.py
tests/: test_rules.py  test_scanner.py
