[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "git-ignore-doctor"
version = "0.1.0"
description = "Diagnose tracked ignored files, risky commits, and missing .gitignore rules."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Yang Lei", email = "yanglei711@gmail.com" }
]
keywords = ["git", "gitignore", "cli", "repository", "hygiene"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities"
]

[project.scripts]
git-ignore-doctor = "git_ignore_doctor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
